# anvil-vk

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  fetch_slang.py  setupshaderc.bat
.github/workflows/: todotoissue.yml
Source/: main.cpp
Source/VulkanUtilities/: anvilVkHandle.cpp  anvilVkHandle.hpp
examples/: CMakeLists.txt
examples/HelloCube/: HelloCube.cpp  main.cpp
examples/HelloTriangle/: HelloTriangle.cpp  main.cpp
examples/TextureCube/: TextureCube.cpp  TextureCube.h  TextureCube.slang  main.cpp
examples/glTFBox/: BoxModel.cpp  BoxModel.h  main.cpp
shaders/: HelloCube.slang  HelloTriangle.slang  HelloTriangle.vert
source/: main.cpp
source/core/: AnvilApplication.cpp  AnvilApplication.h  AnvilInput.cpp  AnvilInput.h  AnvilWindow.cpp  AnvilWindow.h
source/examples/: CMakeLists.txt  HelloTriangle.cpp  HelloTriangle.h
source/examples/HelloCube/: HelloCube.cpp  HelloCube.h
source/examples/HelloTriangle/: HelloTriangle.cpp  main.cpp
source/scene/: AnvilCamera.cpp  AnvilCamera.h
source/utilities/: AnvilFileIO.cpp  AnvilFileIO.h  AnvilMeshLoader.cpp  AnvilMeshLoader.h  AnvilShaderCompiler.cpp  AnvilShaderCompiler.h  AnvilShaderTypes.h  AnvilShaders.cpp  AnvilShaders.h  AnvilUILogger.cpp  AnvilUILogger.h
source/vulkan/: AnvilBuffer.cpp  AnvilBuffer.h  AnvilDeletionQueue.h  AnvilMesh.h  AnvilMeshBuffer.cpp  AnvilMeshBuffer.h  AnvilPipeline.cpp  AnvilPipeline.h  AnvilRenderer.cpp  AnvilRenderer.h  AnvilShaderModule.cpp  AnvilShaderModule.h  AnvilSwapchain.cpp  AnvilSwapchain.h  AnvilUIRenderer.cpp  AnvilUIRenderer.h  AnvilVulkanContext.cpp  AnvilVulkanContext.h  AnvilVulkanDebug.cpp  AnvilVulkanDebug.h
